Committing work from "slickvguy"
Patch published on Ubuntu forums:
http://ubuntuforums.org/showthread.php?t=1106740

--- a/languages/en.lang
+++ b/languages/en.lang
@@ -1,18 +1,18 @@
 about_language=English translation
 about_translation=Robert Wildburger
-about_comments=Birthday reminder for Evolution contacts
+about_comments=Birthday and anniversary reminder for Evolution contacts
 menu_reload=Reload
 menu_blink=Stop blinking
 menu_preferences=Preferences
 menu_about=About
 menu_quit=Quit
-pref_past=Past birthdays
-pref_next=Next birthdays
+pref_past=Days back
+pref_next=Days ahead
 pref_button=Save & Close
 pos_month=1
 pos_day=2
-txt_birthday=Birthdays
-txt_empty=No birthdays in specified period
+txt_birthday=Birthdays and Anniversaries
+txt_empty=No birthdays or anniversaries in specified period
 txt_today=Today
 txt_yesterday=Yesterday
 txt_daysago=### Days ago
